# autobuild

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
autobuild/: __init__.py  cli.py  config.py  loop.py  paths.py  preflight.py  progress.py  retries.py  scheduler.py  session.py  tasks.py  worktree.py
autobuild/templates/: CLAUDE.md  GOAL.md  config.yml
autobuild/templates/tasks/: task-001-example.md
docs/: ARCHITECTURE.md  CONFIGURATION.md  SECURITY.md  loop-lite.md
docs/demo/: README.md  record.sh  seed.sh
docs/specs/: README.md  specs-1-2-permissions-timeout.md  specs-3-4-planner-verification.md
docs/specs/handbuild/: BUILD-ORDER.md  task-101-sentinel-write-discipline.md  task-102-session-permission-posture.md  task-103-usage-capture-and-legible-failures.md  task-104-process-group-spawn-and-deadlines.md  task-105-session-kill-and-timeout.md  task-106-retry-attempts-and-fork-fresh.md  task-107-budgets-endstates-orphan-kill.md
docs/superpowers/plans/: 2026-06-16-python-port.md
examples/: README.md
examples/quotes-api/: GOAL.md
lib/: common.sh  loop.sh  scheduler.sh  session.sh  worktree.sh
templates/: CLAUDE.md  GOAL.md
templates/.autobuild/: config.yml
tests/: conftest.py  test_cli.py  test_config.py  test_doctor.py  test_e2e.py  test_isolation.py  test_loop.py  test_notify.py  test_permissions.py  test_progress.py  test_retries.py  test_scheduler.py  test_sentinel.py  test_session.py  test_summary.py  test_tasks.py  test_worktree.py
tests/fixtures/: claude
tools/: live_smoke.py
(+11 files in other folders)
