[project]
name = "autobuild"
version = "0.1.0"
description = "A file-native harness that drains a backlog toward a GOAL using fresh, isolated Claude Code sessions in parallel git worktrees."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = ["PyYAML>=6.0"]

[project.scripts]
autobuild = "autobuild.cli:main"

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["autobuild"]

[tool.hatch.build.targets.wheel.force-include]
"autobuild/templates" = "autobuild/templates"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
